# GUMBO2

./: .gitignore  README.md
backend/: .env.example  requirements.txt
backend/app/: __init__.py  config.py  graph.py  main.py  memory.py  ollama_client.py  schemas.py
backend/prompts/: boot_prompt.md  persona.md
backend/tests/: test_graph.py  test_memory.py  test_ollama_client.py
frontend/: CMakeLists.txt
frontend/src/: App.cpp  App.hpp  BackendProcess.cpp  BackendProcess.hpp  Layout.cpp  Layout.hpp  WebSocketClient.cpp  WebSocketClient.hpp
scripts/: build_frontend.ps1  run_all.ps1  run_backend.ps1  run_frontend.ps1  setup_backend.ps1  test_backend.ps1
